# ChangeLog for media-plugins/live
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/live/ChangeLog,v 1.110 2009/03/08 22:53:41 aballier Exp $

  08 Mar 2009; Alexis Ballier <aballier@gentoo.org> -live-2008.10.07.ebuild,
  -live-2008.11.13.ebuild, -live-2008.12.20.ebuild, -live-2009.01.26.ebuild:
  remove unused versions

*live-2009.02.23 (08 Mar 2009)

  08 Mar 2009; Alexis Ballier <aballier@gentoo.org> +live-2009.02.23.ebuild:
  version bump

*live-2009.01.26 (03 Feb 2009)

  03 Feb 2009; Alexis Ballier <aballier@gentoo.org> +live-2009.01.26.ebuild:
  version bump

*live-2008.12.20 (19 Jan 2009)

  19 Jan 2009; Alexis Ballier <aballier@gentoo.org> +live-2008.12.20.ebuild:
  version bump

*live-2008.11.13 (14 Nov 2008)

  14 Nov 2008; Alexis Ballier <aballier@gentoo.org> +live-2008.11.13.ebuild:
  version bump, abi break again...

  18 Oct 2008; Alexis Ballier <aballier@gentoo.org> -live-2007.02.20.ebuild,
  -live-2008.02.08.ebuild:
  remove old

  18 Oct 2008; Raúl Porcel <armin76@gentoo.org> live-2008.09.02.ebuild:
  alpha/arm/ia64 stable wrt #240457

  18 Oct 2008; Brent Baude <ranger@gentoo.org> live-2008.09.02.ebuild:
  stable ppc64, bug 240457

*live-2008.10.07 (18 Oct 2008)

  18 Oct 2008; Alexis Ballier <aballier@gentoo.org> +live-2008.10.07.ebuild:
  version bump, abi break unfortunately

  18 Oct 2008; Brent Baude <ranger@gentoo.org> live-2008.09.02.ebuild:
  stable ppc, bug 240457

  18 Oct 2008; Jeroen Roovers <jer@gentoo.org> live-2008.09.02.ebuild:
  Stable for HPPA (bug #240457).

  12 Oct 2008; Friedrich Oslage <bluebird@gentoo.org>
  live-2008.09.02.ebuild:
  Stable on sparc, bug #240457

  08 Oct 2008; Markus Meier <maekke@gentoo.org> live-2008.09.02.ebuild:
  amd64/x86 stable, bug #240457

  16 Sep 2008; Alexis Ballier <aballier@gentoo.org> -live-2008.07.25.ebuild:
  remove unused version

*live-2008.09.02 (08 Sep 2008)
