@@ -1,6 +1,8 @@
 AUX config.gentoo 480 RMD160 7fe83cf6a587076b282c66f4e4d730e41b55fc27 SHA1 c26ee14495ac18d25aff20290b55181fa9245082 SHA256 f8dfcb44221ab3e1fbea958b0be5d817aaebe971129def44a96fe1cb0a7d4a00
 AUX config.gentoo-so 504 RMD160 60475939b963301f3a26416d87e53f8b08668d3e SHA1 9b829c9fe7c3a1f64a77deb5d484361c8ff8cd60 SHA256 48e623d25c0697e3274355670eae2d0d7f590502f63652bc3cf6cadbdd5429e2
 DIST live.2009.02.23.tar.gz 445825 RMD160 9bc541ba88cfe77bb67389fcc8d89805b209e5e2 SHA1 aebd5045c79caff537e1900da717a5b245112db3 SHA256 cf4168494eef4f58c4d37d2bc87944fa1859b0f768c7c5c8a86c069c3b4e91f3
+DIST live.2009.04.20.tar.gz 456902 RMD160 ccb23e91e55846a5331404db710f84e98befbe1a SHA1 c6b931aaeba19ced40737976f8c8ff06f446cce4 SHA256 da4eb7318923012080d76236552058d2ecba1ca2a235e7b72fb2979addad2308
 EBUILD live-2009.02.23.ebuild 3607 RMD160 807f5334c5446362a31ecbf10b612738ad7459aa SHA1 baed83a2bfca2ea59750118b94831f2443dc03d2 SHA256 6ad097eed73efafa583a1063e80cb6e8143ba0f1070bd97bf5796f6dacea4999
-MISC ChangeLog 13761 RMD160 f573f714568f8e1bc1aa0a2985a5951fcccdf08b SHA1 64490b7b6836326af5e4c399f9cb11b17b8f0506 SHA256 608db8ff226ef25b90c749cd812ec65de1faad504b612723977cf092a8e22370
+EBUILD live-2009.04.20.ebuild 3607 RMD160 f9165876714c266527eb49a70ca1f554ca01a401 SHA1 843efb4381b6ab99ab7ad82f474552007fcc94c7 SHA256 45afae7ae75e0eff84729265c0b803c3a3ee183d4b737ecd5d42409b2c998d3b
+MISC ChangeLog 13886 RMD160 e1604f406cdeacd39696a09c7b7e1211f37391e0 SHA1 68da3325e2240cb5cd28492be4c1f57ee587da0c SHA256 6ba121a1c45a60d1e06c250fc9d9ad21097db3a3e1ce8dec092389e6102cee78
 MISC metadata.xml 225 RMD160 6e3fccd1ae62f02a0cb28d319aa185af0020822d SHA1 1b8ccc849053361ac907dc9b652796defd1ce906 SHA256 1a7f3e805478b42bc379b2a36944579d34d7e66ba5bf418a651e1cd58ad0a7f5
