@@ -1,6 +1,11 @@
 # ChangeLog for media-plugins/live
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/live/ChangeLog,v 1.110 2009/03/08 22:53:41 aballier Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/live/ChangeLog,v 1.111 2009/05/14 08:58:11 aballier Exp $
+
+*live-2009.04.20 (14 May 2009)
+
+  14 May 2009; Alexis Ballier <aballier@gentoo.org> +live-2009.04.20.ebuild:
+  version bump
 
   08 Mar 2009; Alexis Ballier <aballier@gentoo.org> -live-2008.10.07.ebuild,
   -live-2008.11.13.ebuild, -live-2008.12.20.ebuild, -live-2009.01.26.ebuild:
